[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection.wav" type="AudioStream" id=2]
[ext_resource path="res://Resources/Textures/LightTRansparetn.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/FloatSelector.gd" type="Script" id=4]
[ext_resource path="res://Resources/Textures/UI/SelectionFrame.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="ChallengePanel" type="Node2D"]
script = ExtResource( 4 )

[node name="MIssionFrame" type="Sprite" parent="."]
position = Vector2( 150, 65 )
scale = Vector2( 2.8, 2.8 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_right = 307.0
margin_bottom = 98.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "Title
"

[node name="IncreaseButton" type="Button" parent="."]
margin_left = 228.8
margin_top = 30.0
custom_fonts/font = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = ">"
flat = true

[node name="DecreaseButton" type="Button" parent="."]
margin_left = 10.8
margin_top = 30.0
custom_fonts/font = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = "<"
flat = true

[node name="Value" type="Label" parent="."]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "0.0
"
align = 1
valign = 1

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 160, 81 )
scale = Vector2( 0.359375, 0.0917969 )
texture = ExtResource( 3 )
energy = 1.78

[node name="ChangeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
script = ExtResource( 6 )

[connection signal="mouse_entered" from="Title" to="." method="_on_Title_mouse_entered"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_IncreaseButton_pressed"]
[connection signal="pressed" from="DecreaseButton" to="." method="_on_DecreaseButton_pressed"]
